testdata/01-simple-single-host/output.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-app-app-example-com
  namespace: default
  ownerReferences:
  - apiVersion: networking.k8s.io/v1
    kind: Ingress
    name: simple-app
    uid: "12345678-1234-1234-1234-123456789012"
    controller: true
    blockOwnerDeletion: true
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: default
    name: example-gw
    sectionName: http
  hostnames:
  - "app.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app-service
      port: 80
      weight: 1
